--- a/MyTweets/Base.lproj/Main.storyboard
+++ b/MyTweets/Base.lproj/Main.storyboard
@@ -24,6 +24,10 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83v-Qy-Rcz">
                                 <rect key="frame" x="62" y="379" width="196" height="85"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="196" id="Z5o-ez-VtJ"/>
+                                    <constraint firstAttribute="height" constant="85" id="kzi-sq-CLU"/>
+                                </constraints>
                                 <state key="normal" title="Login with Twitter">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -36,7 +40,7 @@
                         <constraints>
                             <constraint firstItem="83v-Qy-Rcz" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="359" id="4I5-OP-uDt"/>
                             <constraint firstItem="83v-Qy-Rcz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="62" id="FN2-um-tPb"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="83v-Qy-Rcz" secondAttribute="bottom" constant="104" id="lAe-uN-dQW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="83v-Qy-Rcz" secondAttribute="bottom" constant="12" id="lAe-uN-dQW"/>
                             <constraint firstAttribute="trailing" secondItem="83v-Qy-Rcz" secondAttribute="trailing" constant="62" id="pi0-uo-AJR"/>
                         </constraints>
                     </view>
